# robot-simulator

./: README.md
spawn_robot/: CMakeLists.txt  package.xml
spawn_robot/config/: gz_bridge.yaml
spawn_robot/launch/: spawn_robot.launch.py  world.launch.py
spawn_robot/model/formula/urdf/: formula.gazebo  formula_description.urdf.xacro  vehicle_properties.urdf.xacro
spawn_robot/model/formula/urdf/bases/: formula_body.urdf.xacro
spawn_robot/model/formula/urdf/sensors/: vlp-16.urdf.xacro
spawn_robot/model/formula/urdf/wheels/: formula_suspension.urdf.xacro
spawn_robot/rviz/: formula.rviz
spawn_robot/worlds/: default.sdf
